# hackerrank

./: pyproject.toml
hackerrank/: exercises_python_02.py  exercises_statistics_da1_standard_deviation.py  exercises_statistics_day0.py
hackerrank/Artificial Intelligence/: Bot saves princess.py
hackerrank/Problem Solving/: Arrays - DS.py
hackerrank/SQL/: Japanese Cities Attributes.sql  Japanese Cities Names.sql  Revising the Select Query I.sql  Revising the Select Query II.sql  SELECT By ID.sql  Weather Observation Station 3.sql  Weather Observation Station 4.sql
hackerrank/python/: Day 11 2D Arrays.py  Day 13 Abstract Classes.py  Day 3 Intro to Conditional Statements.py  Day 4 Class vs Instance.py  Day 5 Loops.py  Day 6 Lets Review.py  Day 7 Arrays.py  Day 9 recursion 3.py  Write a function.py  day 10 Binary Numbers.py  day 12 Inheritance  day 8 dictionary and maps.py
hackerrank/statistics/: Day 1 Interquartile Range.py  exercises.py  exercises_statistics_da01_quartiles.py
tests/: test_hackerrank.py
