[tool.poetry]
name = "hackerrank"
version = "0.1.0"
description = ""
authors = ["alexandre <alexandre@malme.com.br>"]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.13.0"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
